--- a/templates/dvaapp/video_detail.html
+++ b/templates/dvaapp/video_detail.html
@@ -35,11 +35,11 @@
     </div>
     <div class="col-lg-6">
         <div class="box">
-        <div class="box-header with-border">
+        <div class="box-header with-border" >
             <h2>Video</h2>
         </div>
-        <div class="box-body">
-            <video controls="" preload="metadata" name="media">
+        <div class="box-body" style="text-alight:center">
+            <video controls="" preload="metadata" name="media" style="width:80%;margin-left:auto;margin-right:auto">
             <source src="{{url}}" type="video/mp4">
             </video>
         </div>
