--- a/templates/dvaapp/video_detail.html
+++ b/templates/dvaapp/video_detail.html
@@ -38,8 +38,8 @@
         <div class="box-header with-border" >
             <h2>Video</h2>
         </div>
-        <div class="box-body" style="text-alight:center">
-            <video controls="" preload="metadata" name="media" style="width:80%;margin-left:auto;margin-right:auto">
+        <div class="box-body" style="text-align:center">
+            <video controls="" preload="metadata" name="media" style="width:90%;margin-left:auto;margin-right:auto">
             <source src="{{url}}" type="video/mp4">
             </video>
         </div>
