--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu">
         <li><a href="/"><i class="fa fa-home"></i><span class="nav-label">Home</span></a></li>
-        <li><a href="/"><i class="fa fa fa-eye"></i><span class="nav-label">Video viewer</span></a></li>
+        <li><a href="/videos/"><i class="fa fa fa-eye"></i><span class="nav-label">Video viewer</span></a></li>
         <li><a href="/admin"><i class="fa fa-lock"></i><span class="nav-label">Admin</span></a></li>
       </ul>
     </section>
@@ -110,6 +110,7 @@
 <script src="/static/plugins/flot/jquery.flot.pie.js"></script>
 <script src="/static/bootstrap/js/bootstrap.min.js"></script>
 <script src="/static/dist/js/app.min.js"></script>
+<script src="/static/tables.js"></script>
 <script src="/static/plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="/static/plugins/datatables/dataTables.bootstrap.min.js"></script>
 {% block page_js %}
