--- a/templates/dvaapp/video_list.html
+++ b/templates/dvaapp/video_list.html
@@ -15,14 +15,14 @@
                 <table class="table dataTables">
                 <thead>
                 <tr>
-                    <th>name</th>
-                    <th>key</th>
-                    <th>bucket </th>
-                    <th>duration</th>
-                    <th>height</th>
-                    <th>width</th>
-                    <th>created</th>
-                    <th>view</th>
+                    <th class="text-center">name</th>
+                    <th class="text-center">key</th>
+                    <th class="text-center">bucket </th>
+                    <th class="text-center">duration</th>
+                    <th class="text-center">height</th>
+                    <th class="text-center">width</th>
+                    <th class="text-center">created</th>
+                    <th class="text-center">view</th>
                 </tr>
                 </thead>
                 <tbody>
