--- a/templates/dvaapp/video_detail.html
+++ b/templates/dvaapp/video_detail.html
@@ -6,26 +6,24 @@
 </section>
 <section class="content">
 <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-4">
         <div class="box">
             <div class="box-header with-border">
-            <h2>List of frames with {{ object.key }}</h2>
+            <h3>List of frames in {{ object.name }}</h3>
             </div>
             <div class="box-body">
                 <table class="table dataTables">
                 <thead>
                 <tr>
-                        <th>key</th>
-                        <th>seconds</th>
-                        <th>view</th>
+                        <th class="text-center">seconds</th>
+                        <th class="text-center">view</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for f in frame_list %}
                     <tr>
-                        <td>{{ f.key }} </td>
-                        <td>{{ f.time_seconds }} </td>
-                        <td><a href="/frames/{{ f.pk }}">view</a></td>
+                        <td class="text-right">{{ f.time_seconds }} </td>
+                        <td class="text-center"><a href="/frames/{{ f.pk }}">view</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -33,10 +31,10 @@
                 </div>
             </div>
     </div>
-    <div class="col-lg-6">
+    <div class="col-lg-8">
         <div class="box">
         <div class="box-header with-border" >
-            <h2>Video</h2>
+            <h3>Video</h3>
         </div>
         <div class="box-body" style="text-align:center">
             <video controls="" preload="metadata" name="media" style="width:90%;margin-left:auto;margin-right:auto">
