indexing testing done on OSX docker pending

--- a/templates/dvaapp/video_list.html
+++ b/templates/dvaapp/video_list.html
@@ -35,7 +35,7 @@
                         <td class="text-right">{{ v.height }} </td>
                         <td class="text-right">{{ v.width }} </td>
                         <td class="text-center">{{ v.created }}</td>
-                        <td><a href="/videos/{{ v.pk }}">view</a></td>
+                        <td class="text-center"><a href="/videos/{{ v.pk }}">view</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
