single migrate added youtube-dl

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
       <!-- /.search form -->
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu">
-        <li><a href="/"><i class="fa fa-home"></i><span class="nav-label">Home</span></a></li>
+        <li><a href="/"><i class="fa fa-search"></i><span class="nav-label">Dashboard</span></a></li>
         <li><a href="/videos/"><i class="fa fa fa-eye"></i><span class="nav-label">Video viewer</span></a></li>
         <li><a href="/admin"><i class="fa fa-lock"></i><span class="nav-label">Admin</span></a></li>
       </ul>
@@ -100,7 +100,7 @@
     <!-- To the right -->
     <div class="pull-right hidden-xs">
     </div>
-    <strong><a href="http://www.akshaybhat.com">Akshay Bhat, Cornell University</a>.</strong>.
+    <strong>Copyright <a href="http://www.akshaybhat.com">Akshay Bhat, Cornell University</a> All rights reserved.</strong>
   </footer>
 </div>
 <!-- ./wrapper -->
