--- a/dvaapp/static/app/app.css
+++ b/dvaapp/static/app/app.css
@@ -3,7 +3,7 @@
 }
 
 body{
-   min-width:1020px; /* suppose you want minimun width of 1000px */
+   min-width:1200px; /* suppose you want minimun width of 1000px */
    /*width: auto !important;  !* Firefox will set width as auto *!*/
    /*width:1500px;             !* As IE ignores !important it will set width as 1000px; *!*/
    overflow-x: auto !important;
@@ -57,6 +57,9 @@ canvas
     width: 10px;
 }
 
+.uploadmenu{
+    width: 500px;
+}
 
 input[type=range] {
     display: inline;
@@ -72,7 +75,6 @@ input[type=color] {
 
 #side_options, #center_options{
     text-align:center;
-    height: 760px;
 }
 
 #side_options{
@@ -101,7 +103,6 @@ input[type=color] {
 }
 
 #search_quick{
-    margin-right: 30px;
 }
 
 #btnLoad{
