--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -116,12 +116,24 @@
         </div>
     </div>
 </div>
-<div ng-repeat="row in results" class="row" >
+<div class="row m-t">
+<div class="box">
+<div class="box-header">
+<h3>Results</h3>
+</div>
+<div class="col-lg-12">
+<div class="box-content">
+<div ng-repeat="row in results" class="row m-t" >
     <div ng-repeat="item in row" class="col-lg-3 col-sm-6 col-xs-6" >
       <img style="max-height:95%;max-width:98%" ng-src="{[ item.url ]}" />
-      <p> {[ item.algo ]}</p> <a href="/video/{[ item.video_primary_key ]}"> video </a>
+      <p> Algorithm {[ item.algo ]} in <a href="/videos/{[ item.video_primary_key ]}"> video </a> at {[ item.time_seconds ]} seconds</p>
     </div>
 </div>
+</div>
+</div>
+</div>
+</div>
+
 </section>
 {% endblock %}
 
