image datasets as zipped files

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -75,7 +75,7 @@
             <div class="col-lg-6">
                 <div class="box">
                     <div class="box-body">
-                        <h4>Upload video</h4>
+                        <p>Upload a video or multiple images in a single zip file</p>
                         <form role="form"  method="post" enctype="multipart/form-data" action="#" >
                             <div class="form-group">
                             <input id="id_name" name="name" class="form-control" type="text" required="" placeholder="provide a name">
