image datasets as zipped files

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -101,7 +101,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                                <tr><td>Videos</td><td class="text-right">{{video_count}}</td><td class="text-center"><a href="/videos/">view</a></td></tr>
+                                <tr><td>Videos / Datasets</td><td class="text-right">{{video_count}}</td><td class="text-center"><a href="/videos/">view</a></td></tr>
                                 <tr><td>Frames</td><td class="text-right">{{frame_count}}</td><td></td></tr>
                                 <tr><td>Detections</td><td class="text-right">{{detection_count}}</td><td></td></tr>
                                 <tr><td>Queries</td><td class="text-right">{{query_count}}</td><td></td></tr>
