--- a/templates/dvaapp/video_detail.html
+++ b/templates/dvaapp/video_detail.html
@@ -9,13 +9,13 @@
     <div class="col-lg-4">
         <div class="box">
             <div class="box-header with-border">
-            <h3>List of frames in {{ object.name }}</h3>
+            <h3>List of frames/images in {{ object.name }}</h3>
             </div>
             <div class="box-body">
                 <table class="table dataTables">
                 <thead>
                 <tr>
-                        <th class="text-center">seconds</th>
+                        <th class="text-center">seconds / frame_id</th>
                         <th class="text-center">view</th>
                 </tr>
                 </thead>
@@ -31,6 +31,7 @@
                 </div>
             </div>
     </div>
+{% if not video.dataset %}
     <div class="col-lg-8">
         <div class="box">
         <div class="box-header with-border" >
@@ -43,6 +44,7 @@
         </div>
         </div>
     </div>
+{% endif %}
 </div>
 </section>
 {% endblock %}
